[b][color=orange]v4.62 for Shadowland PrePatch[/color], 03.11.2020[/b][list]
[*]Fixed an install whoopsi
[*]Small code updates
[*]Added Deezyl to the Patreon list <3[/list]


[b][color=orange]v4.61 for Shadowland PrePatch[/color], 02.11.2020[/b][list]
[*]Changed the option layout a bit
[*]Style the LocationPanel again
[*]Fixed Paragon Reputation Notification
[*]Updated deDE locales from Dlarge & Rav
[*]Updated the Rectangle Minimap Code -- Credits: Windtools
[*]Updated/Fixed some skins
[*]MicroBar: Added 2 new Buttons: Professions & Volume
[*]MicroBar: Fixed an issue on initial load with Heartstones
[*]Prevent errors on AFK Mode (hopefully)
[*]Added: Patrons & Donator List to: Information[/list]


[b][color=orange]v4.60 for Shadowland PrePatch[/color], 24.10.2020[/b][list]
[*]Added a skin for the AddOn WarPlan
[*]Fixed an install whoopsi for the position on AB3 >.>
[*]Added a frame on the MailBox SendMail Frame, to easy send mail to contacts
[*]The Keybinds for the AutoButtons now finally works
[*]Added a custom fade option if you use mouseOver on AutoButtons
[*]Add a right click function for MicroBar: Collection & Toybox Buttons
[*]Small tweaks and skin upates[/list]


[b][color=orange]v4.59 for Shadowland PrePatch[/color], 22.10.2020[/b][list]
[*]Fix a green icon on my RaidManager. I remove by accident a texture
[*]More updates to the MicroBar: Fix stuttering/lags
[*]The MicroBar also shows now the time datatext from ElvUI
[*]Updated my AutoButtons
[*]Updated the ChatBar
[*]Added a mover for the Buff Reminder[/list]


[b][color=orange]v4.58 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
[*]More fixes/updates to my new MicroBar -> own Option-Category
[*]Fixed an error with the ActionBarProfile skin
[*]Added some more frames to the blacklist on the FlightMode[/list]


[b][color=orange]v4.57 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
[*]Updated my DPS Layout due to some backdrop changes in ElvUI
[*]Fixed an error in LFG Info