@@ -1,3 +1,11 @@
+[b][color=orange]v4.63 for Shadowland PrePatch[/color], 08.11.2020[/b][list]
+[*]MicroBar: Added a Game Menu Button
+[*]Reposition Wowheadlinks on the WorldMap
+[*]Updated Cooldown Flash
+[*]Fixed an option error on Rectangle Minimap/LocPanel
+[*]Added Zhadar to the Patreon list <3[/list]
+
+
 [b][color=orange]v4.62 for Shadowland PrePatch[/color], 03.11.2020[/b][list]
 [*]Fixed an install whoopsi
 [*]Small code updates
